[OBMIN-487] changed the search for advertisement by all parameters